removed package file, fixed grammar, made title uniform

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700' rel='stylesheet' type='text/css'>
-        <title>Random User Form Auto-completion Tool</title>
+        <title>Random User Form Auto-Fill Tool</title>
 
         <!-- Bootstrap core CSS -->
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
@@ -28,11 +28,11 @@
                 <ul class="nav nav-pills pull-right">
                     <li class="active"><a class="fork" href="https://github.com/eddieferrer/autofill.git">Fork Me on GitHub</a></li>
                 </ul>
-                <h3 class="text-muted">Random User Form Auto-completion Tool</h3>
+                <h3 class="text-muted">Random User Form Auto-Fill Tool</h3>
             </div>
 
             <div class="jumbotron">
-                <h1>Random User Autofill</h1>
+                <h1>Random User Auto-Fill</h1>
                 <p class="lead">Drag this button onto your bookmarks bar.</p>
                 <p><a class="btn btn-lg btn-success"  href="javascript: var title=window.location.href;(function(){s=document.createElement('script');s.type='text/javascript';s.src='http://cdn.rawgit.com/eddieferrer/autofill/master/src/randomUserAutoFill.js?v='+parseInt(Math.random()*99999999);document.body.appendChild(s);void(0);})();">AutoFill</a></p>
             </div>
