--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row marketing">
                 <div class="col-lg-12">
                     <h4>What is it?</h4>
-                    <p>A way to fill out form fields with generated user data. You can use this in a bookmarklet. Great for testing forms or for when you want to fill out forms with fake data. Uses the random user API to get random user data each time.</p>
+                    <p>A way to fill out form fields with generated user data. You can use this in a bookmarklet. Great for testing forms or for when you want to fill out forms with fake data.  Pulls random user info each time from the random user API.</p>
                     <h4>Demo Form</h4>
                     <form role="form" class="form-inline">
                         <div class="form-group">
